--- a/app/src/main/res/layout/fragment_notdo.xml
+++ b/app/src/main/res/layout/fragment_notdo.xml
@@ -1,31 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="top|center">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:elevation="3dp"
-        card_view:cardCornerRadius="@dimen/card_album_radius">
+        card_view:cardCornerRadius="@dimen/card_album_radius"
+        tools:layout_gravity="top|center">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="@dimen/album_cover_height"
-                android:layout_height="@dimen/album_cover_height"
-                tools:background="@drawable/user"
-                android:clickable="true"
-                android:scaleType="fitXY"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp" />
+            android:layout_height="wrap_content">
 
 
             <TextView
@@ -38,18 +31,9 @@
                 tools:text="\@username"
                 android:layout_alignBaseline="@+id/fullname"
                 android:layout_alignBottom="@+id/fullname"
-                android:layout_toEndOf="@+id/fullname" />
+                android:layout_toEndOf="@+id/fullname"
+                android:textColor="@color/cardview_shadow_start_color" />
 
-
-            <ImageView
-                android:id="@+id/overflow"
-                android:layout_width="@dimen/ic_album_overflow_width"
-                android:layout_height="@dimen/ic_album_overflow_height"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/thumbnail"
-                android:layout_marginTop="@dimen/ic_album_overflow_margin_top"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_dots" />
 
             <TextView
                 android:id="@+id/fullname"
@@ -62,9 +46,72 @@
                 android:textSize="@dimen/album_title"
                 tools:text="John Doe"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/thumbnail"
+                android:layout_toEndOf="@+id/linear1"
                 android:layout_marginStart="15dp"
                 android:textStyle="normal|bold" />
+
+            <ImageView
+                android:id="@+id/overflow"
+                android:layout_width="@dimen/ic_album_overflow_width"
+                android:layout_height="@dimen/ic_album_overflow_height"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_dots"
+                android:layout_alignTop="@+id/linear1"
+                android:layout_alignParentEnd="true" />
+
+            <LinearLayout
+                android:id="@+id/linear1"
+                android:orientation="vertical"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="@dimen/album_cover_height"
+                    android:layout_height="@dimen/album_cover_height"
+                    tools:background="@drawable/user"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <com.sackcentury.shinebuttonlib.ShineButton
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@android:color/darker_gray"
+                    app:btn_color="@android:color/darker_gray"
+                    app:btn_fill_color="#FF6666"
+                    app:allow_random_color="false"
+                    app:enable_flashing="false"
+                    app:big_shine_color="#FF6666"
+                    app:click_animation_duration="200"
+                    app:shine_animation_duration="1500"
+                    app:shine_turn_angle="10"
+                    app:small_shine_offset_angle="20"
+                    app:small_shine_color="#CC9999"
+                    app:shine_count="8"
+                    app:siShape="@raw/like"
+                    android:id="@+id/like_button"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="@dimen/songs_count_padding_bottom"
+                    android:layout_marginLeft="@dimen/album_title_padding"
+                    android:layout_marginRight="@dimen/album_title_padding"
+                    android:layout_gravity="center_horizontal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/content"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/participant_count"
+                    tools:text="999"
+                    android:textColor="@color/lbl_name" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/content"
@@ -75,8 +122,10 @@
                 android:paddingRight="@dimen/album_title_padding"
                 android:textSize="18sp"
                 tools:text="I wont smoke again"
-                android:layout_alignTop="@+id/overflow"
-                android:layout_alignStart="@+id/fullname" />
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/username"
+                android:layout_alignStart="@+id/fullname"
+                android:textColor="@color/input_register_hint" />
 
         </RelativeLayout>
 
