--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="album_title">#4c4c4c</color>
 
     <color name="btn_send_normal">#02c754</color>
+    <color name="btn_send_gray">#e0e0e0</color>
     <color name="btn_send_pressed">#006633</color>
 </resources>
