--- a/app/src/main/res/menu/menu_not2do_creator.xml
+++ b/app/src/main/res/menu/menu_not2do_creator.xml
@@ -6,4 +6,14 @@
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:title="@string/action_share" />
+
+    <item
+        android:id="@+id/action_edit"
+        android:orderInCategory="101"
+        android:title="@string/action_edit" />
+
+    <item
+        android:id="@+id/action_remove"
+        android:orderInCategory="102"
+        android:title="@string/action_remove" />
 </menu>
