--- a/app/src/main/res/layout/activity_create_not2do.xml
+++ b/app/src/main/res/layout/activity_create_not2do.xml
@@ -53,7 +53,7 @@
                     android:text="Button"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:id="@+id/send" />
+                    android:id="@+id/sendBtn" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
