--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_my_profile"
         android:orderInCategory="99"
         android:icon="@drawable/user"
+        android:title="Profile"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
