--- a/app/src/main/res/layout/activity_create_not2do.xml
+++ b/app/src/main/res/layout/activity_create_not2do.xml
@@ -42,15 +42,16 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textMultiLine"
-                    android:ems="10"
                     android:id="@+id/content"
-                    android:layout_weight="1" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:inputType="textMultiLine"
+                    android:selectAllOnFocus="false"
+                    tools:layout_height="wrap_content" />
 
                 <Button
-                    android:text="Button"
+                    android:text="Post"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:id="@+id/sendBtn" />
